<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <groupId>sk.springframework.com.java</groupId>
    <artifactId>test_pet_clinic</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>test_pet_clinic</name>
    <description>SPF Pet Clinic</description>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>pet-clinic-data</module>
        <module>pet-clinic-web</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.9.RELEASE</version>
        <!--<version>2.0.3.RELEASE</version>-->
        <relativePath/>
    </parent>

    <properties>
        <!--<java.version>1.8</java.version>-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <jaxb.version>2.3.0</jaxb.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
<!--                <artifactId>maven-release-plugin</artifactId>-->
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
          <!--      <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    &lt;!&ndash; Force alphabetical order to have a reproducible build &ndash;&gt;
                   &lt;!&ndash; <runOrder>alphabetical</runOrder>
                    <useSystemClassLoader>false</useSystemClassLoader>&ndash;&gt;
                </configuration>-->
            </plugin>
        </plugins>
    </build>
    <scm>
        <developerConnection>scm:git:https://github.com/shilpaGITHub/test_pet_clinic.git</developerConnection>
        <tag>Head</tag>
   </scm>

</project>
